--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "mongoose": "^5.11.2",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
